--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-aws.access.key.id = AKIAJHGKJ3GKOLSABU4Q
-aws.access.key.secret = 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
+aws.access.key.id = PKIAJHG34J3GABCSABU7Q
+aws.access.key.secret = LPkjsde3QLm4yslskdBe21ugFbt7Ai4W
 aws.polly.region = us-east-1
