cloud storage implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
-aws.access.key.id = PKIAJHG34J3GABCSABU7Q
-aws.access.key.secret = LPkjsde3QLm4yslskdBe21ugFbt7Ai4W
-aws.polly.region = us-east-1
+aws.access.key.id = 
+aws.access.key.secret = 
+aws.region = us-east-1
+
+aws.s3.data.bucket = remainders-25022018
+
+aws.temporary.credentials.validity.duration = 
+
