--- a/pom.xml
+++ b/pom.xml
@@ -34,11 +34,25 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk 
+<dependency>
+    <groupId>com.amazonaws</groupId>
+    <artifactId>aws-java-sdk</artifactId>
+    <version>1.11.283</version>
+</dependency>
+-->
+		
 		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-polly -->
 		<dependency>
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-polly</artifactId>
 			<version>1.11.282</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
+		<dependency>
+		    <groupId>com.amazonaws</groupId>
+		    <artifactId>aws-java-sdk-s3</artifactId>
+		    <version>1.11.283</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.googlecode.soundlibs/jlayer -->
 		<dependency>
@@ -46,6 +60,23 @@
 			<artifactId>jlayer</artifactId>
 			<version>1.0.1.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+		<dependency>
+		    <groupId>javax.xml.bind</groupId>
+		    <artifactId>jaxb-api</artifactId>
+		    <version>2.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-sts -->
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-sts -->
+<dependency>
+    <groupId>com.amazonaws</groupId>
+    <artifactId>aws-java-sdk-sts</artifactId>
+    <version>1.11.285</version>
+</dependency>
+
+		
+		
+		
 	</dependencies>
 
 	<build>
