--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
+# Amazone AWS Properties
+#
 aws.access.key.id = 
 aws.access.key.secret = 
 aws.region = us-east-1
-
 aws.s3.data.bucket = remainders-25022018
-
 aws.temporary.credentials.validity.duration = 
-
+#
+# Twilio properties
+#
+twilio.account.sid = BCjisjdhsjhdBCe8513e558
+twilio.auth.token = fdd7ejshdcbmxn2651b9c7583gdgf
+twilio.from.phone.number = +13205432345
