--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,16 @@
 aws.access.key.id = 
 aws.access.key.secret = 
 aws.region = us-east-1
-aws.s3.data.bucket = remainders-25022018
+aws.s3.data.bucket = remainders-11032018
 aws.temporary.credentials.validity.duration = 
+#
+# Amazon Polly Properties
+#
+aws.polly.language.code = en-IN
+aws.polly.voice.id = Raveena
 #
 # Twilio properties
 #
-twilio.account.sid = BCjisjdhsjhdBCe8513e558
-twilio.auth.token = fdd7ejshdcbmxn2651b9c7583gdgf
-twilio.from.phone.number = +13205432345
+twilio.account.sid = BD1a1234f87beee26b9876c8e8513e432
+twilio.auth.token = zzz12341df987654c7a71b9c1234xz87
+twilio.from.phone.number = +13111116667
